parser.output
Zustand 33 Konflikte: 1 Schiebe/Reduziere
Zustand 51 Konflikte: 1 Schiebe/Reduziere
Zustand 62 Konflikte: 1 Schiebe/Reduziere
Zustand 174 Konflikte: 1 Schiebe/Reduziere
Zustand 175 Konflikte: 1 Schiebe/Reduziere
Zustand 176 Konflikte: 1 Schiebe/Reduziere
Zustand 177 Konflikte: 2 Schiebe/Reduziere
Zustand 178 Konflikte: 4 Schiebe/Reduziere
Zustand 179 Konflikte: 2 Schiebe/Reduziere
Zustand 180 Konflikte: 3 Schiebe/Reduziere
Zustand 181 Konflikte: 4 Schiebe/Reduziere
Zustand 182 Konflikte: 3 Schiebe/Reduziere
Zustand 183 Konflikte: 3 Schiebe/Reduziere
Zustand 238 Konflikte: 3 Schiebe/Reduziere
Zustand 239 Konflikte: 3 Schiebe/Reduziere
Zustand 262 Konflikte: 1 Schiebe/Reduziere
Zustand 263 Konflikte: 1 Schiebe/Reduziere
Zustand 385 Konflikte: 1 Schiebe/Reduziere


Grammatik

    0 $accept: start $end

    1 start: %empty
    2      | filestmnts

    3 using: using_low
    4      | using_low "=" IDENT

    5 using_low: "using" "namespace" type ";"
    6          | "using" "enum" type ";"
    7          | "using" "class" type ";"

    8 filestmnt: class
    9          | namespace
   10          | mthd
   11          | using
   12          | enum

   13 filestmnts: filestmnt
   14           | filestmnts filestmnt

   15 classstmnt: mthd
   16           | mthdop
   17           | mthdcnst
   18           | class
   19           | prop
   20           | using
   21           | enum

   22 classstmnts: classstmnt
   23            | classstmnts classstmnt

   24 codestmnt: ifelse
   25          | using
   26          | for
   27          | trycatch
   28          | while
   29          | switch
   30          | statement ";"
   31          | scope
   32          | declaration ";"
   33          | val ";"
   34          | ";"
   35          | error

   36 codestmnts: codestmnt
   37           | codestmnt codestmnts

   38 type_ident: IDENT
   39           | type_ident "::" IDENT

   40 type: type_ident
   41     | "::" type_ident
   42     | "::" type_ident template_use
   43     | type_ident template_use

   44 typelist: type
   45         | type ","
   46         | type "," typelist

   47 encpsltn: encpsltn_n_cls
   48         | "derived"
   49         | "private"

   50 encpsltn_n_cls: "public"
   51               | "local"

   52 template_def: type IDENT
   53             | type IDENT "=" cval

   54 template_defs: template_def
   55              | template_def ","
   56              | template_defs "," template_def

   57 template_use: "<" typelist ">"

   58 template: "<" template_defs ">"

   59 namespace: "namespace" type_ident "{" filestmnt "}"

   60 enum: encpsltn_n_cls "enum" enum_body
   61     | encpsltn_n_cls "enum" ":" type enum_body

   62 enum_body: "{" "}"
   63          | "{" enum_values "}"

   64 enum_values: enum_value
   65            | enum_value ","
   66            | enum_value ";"
   67            | enum_value "," enum_values
   68            | enum_value ";" enum_values

   69 enum_value: IDENT
   70           | IDENT "=" cval

   71 class: classhead classbody
   72      | classhead ":" typelist classbody
   73      | classhead template classbody
   74      | classhead template ":" typelist classbody

   75 classhead: encpsltn "class" IDENT

   76 classbody: "{" classstmnts "}"

   77 mthd: mthd_head mthd_args mthd_body
   78     | mthd_head template mthd_args mthd_body

   79 mthd_head: encpsltn type IDENT
   80          | "unbound" encpsltn type IDENT

   81 mthd_args: "(" ")"
   82          | "(" mthd_arglist ")"

   83 mthd_body: "{" "}"
   84          | "{" codestmnts "}"
   85          | "=>" codestmnt

   86 mthd_arglist: mthd_arg
   87             | mthd_arg ","
   88             | mthd_arg "," mthd_arglist

   89 mthd_arg: type IDENT
   90         | type IDENT "=" cval

   91 mthdop: mthdop_head mthdop_args mthd_body
   92       | mthdop_head template mthdop_args mthd_body

   93 mthdop_head: "unbound" encpsltn type

   94 mthdop_args: "operator" mthdop_ops1s "(" mthd_arg ")"
   95            | mthdop_ops1p "operator" "(" mthd_arg ")"
   96            | mthdop_ops1s "operator" "(" mthd_arg ")"
   97            | "operator" mthdop_ops2 "(" mthd_arg "," mthd_arg ")"

   98 mthdop_ops1p: "!"
   99             | "~"
  100             | "-"
  101             | "+"

  102 mthdop_ops1s: "++"
  103             | "--"

  104 mthdop_ops2: "+"
  105            | "-"
  106            | "*"
  107            | "/"
  108            | ">"
  109            | ">="
  110            | ">>"
  111            | ">>>"
  112            | "<"
  113            | "<="
  114            | "<<"
  115            | "<<<"
  116            | "!="
  117            | "=="
  118            | ".."
  119            | "&"
  120            | "&&"
  121            | "|"
  122            | "||"
  123            | "^"
  124            | "%"

  125 mthdcnst: mthdcnst_head mthd_args mthd_body

  126 mthdcnst_head: encpsltn IDENT
  127              | "~" IDENT

  128 prop: prop_head prop_body

  129 prop_head: encpsltn type IDENT
  130          | "unbound" encpsltn type IDENT

  131 prop_body: "{" prop_get prop_set "}"
  132          | "{" prop_get "}"
  133          | "{" prop_set prop_get "}"
  134          | "{" prop_set "}"
  135          | ";"

  136 prop_get: "get" "(" IDENT ")" mthd_body

  137 prop_set: "set" mthd_body

  138 ifelse: "if" "(" val ")" codestmnt
  139       | "if" "(" val ")" codestmnt "else" codestmnt

  140 for: "for" "(" for_step ")" codestmnt
  141    | "for" "(" for_each ")" codestmnt

  142 for_step: for_step_arg ";" for_step_arg ";" for_step_arg
  143         | for_step_arg ";" for_step_arg ";"
  144         | for_step_arg ";" ";" for_step_arg
  145         | for_step_arg ";" ";"
  146         | ";" for_step_arg ";" for_step_arg
  147         | ";" for_step_arg ";"
  148         | ";" ";" for_step_arg

  149 for_step_arg: val
  150             | val ","
  151             | val "," for_step_arg

  152 for_each: declaration ":" val
  153         | declaration ":" val ".." val

  154 while: "while" "(" val ")" codestmnt
  155      | "do" codestmnt "while" "(" val ")"

  156 switch: "switch" "(" val ")" "{" switch_cases "}"

  157 switch_cases: switch_case
  158             | switch_case switch_cases

  159 switch_case: case ":"
  160            | case ":" codestmnt

  161 case: "case" cval
  162     | "default"

  163 try: "try" codestmnt

  164 catch: "catch" codestmnt
  165      | "catch" "(" declaration ")" codestmnt

  166 catchlist: catch
  167          | catch catchlist

  168 finally: "finally" codestmnt

  169 trycatch: try catchlist finally
  170         | try catchlist
  171         | try finally

  172 statement: "return"
  173          | "return" val
  174          | "throw"
  175          | "throw" val
  176          | "delete" val
  177          | "goto" IDENT
  178          | "goto" case

  179 declaration: type IDENT

  180 assignment: IDENT "=" val
  181           | declaration "=" val

  182 scope: "{" "}"
  183      | "{" codestmnt "}"

  184 val: exp01

  185 exp01: exp02
  186      | exp02 "?" exp01 ":" exp01

  187 exp02: exp03
  188      | exp03 "||" exp03

  189 exp03: exp04
  190      | exp04 "&&" exp04

  191 exp04: exp05
  192      | exp05 "==" exp05
  193      | exp05 "!=" exp05

  194 exp05: exp06
  195      | exp06 "<" exp06
  196      | exp06 "<=" exp06
  197      | exp06 ">" exp06
  198      | exp06 ">=" exp06

  199 exp06: exp07
  200      | exp07 "+" exp07
  201      | exp07 "-" exp07

  202 exp07: exp08
  203      | exp08 "*" exp08
  204      | exp08 "/" exp08
  205      | exp08 "%" exp08

  206 exp08: exp09
  207      | exp09 "<<" exp09
  208      | exp09 "<<<" exp09
  209      | exp09 ">>" exp09
  210      | exp09 ">>>" exp09

  211 exp09: exp10
  212      | exp10 "^" exp10
  213      | exp10 "|" exp10
  214      | exp10 "&" exp10

  215 exp10: exp11
  216      | "!" exp11
  217      | "~" exp11

  218 exp11: expp
  219      | call
  220      | dotnav
  221      | arrget

  222 arrget: exp11 "[" exp01 "]"

  223 dotnav: exp11 "." IDENT

  224 call: exp11 "(" explist ")"
  225     | exp11 "(" ")"

  226 explist: exp01
  227        | exp01 ","
  228        | exp01 "," explist

  229 expp: cval
  230     | "this"
  231     | "new" type
  232     | assignment

  233 cval: L_NUMBER
  234     | L_STRING
  235     | L_CHAR
  236     | "true"
  237     | "false"
  238     | type


Terminale und die Regeln, in denen sie verwendet werden

$end (0) 0
error (256) 35
"public" (258) 50
"local" (259) 51
"derived" (260) 48
"private" (261) 49
"unbound" (262) 80 93 130
"=" (263) 4 53 70 90 180 181
"&&" (264) 120 190
"&" (265) 119 214
"/" (266) 107 204
"*" (267) 106 203
"%" (268) 124 205
"||" (269) 122 188
"|" (270) 121 213
"^" (271) 123 212
"~" (272) 99 127 217
":" (273) 61 72 74 152 153 159 160 186
"::" (274) 39 41 42
"+" (275) 101 104 200
"++" (276) 102
"-" (277) 100 105 201
"--" (278) 103
"<=" (279) 113 196
"<" (280) 57 58 112 195
"<<" (281) 114 207
"<<<" (282) 115 208
">=" (283) 109 198
">" (284) 57 58 108 197
">>" (285) 110 209
">>>" (286) 111 210
"==" (287) 117 192
"!=" (288) 116 193
"!" (289) 98 216
"{" (290) 59 62 63 76 83 84 131 132 133 134 156 182 183
"}" (291) 59 62 63 76 83 84 131 132 133 134 156 182 183
"(" (292) 81 82 94 95 96 97 136 138 139 140 141 154 155 156 165 224
    225
")" (293) 81 82 94 95 96 97 136 138 139 140 141 154 155 156 165 224
    225
"[" (294) 222
"]" (295) 222
";" (296) 5 6 7 30 32 33 34 66 68 135 142 143 144 145 146 147 148
"," (297) 45 46 55 56 65 67 87 88 97 150 151 227 228
"." (298) 223
"?" (299) 186
"=>" (300) 85
"class" (301) 7 75
"get" (302) 136
"set" (303) 137
"namespace" (304) 5 59
"if" (305) 138 139
"for" (306) 140 141
"else" (307) 139
"while" (308) 154 155
"do" (309) 155
"switch" (310) 156
"case" (311) 161
"default" (312) 162
"return" (313) 172 173
"throw" (314) 174 175
"goto" (315) 177 178
"try" (316) 163
"catch" (317) 164 165
"finally" (318) 168
"operator" (319) 94 95 96 97
"using" (320) 5 6 7
"enum" (321) 6 60 61
".." (322) 118 153
"true" (323) 236
"false" (324) 237
"this" (325) 230
"new" (326) 231
"delete" (327) 176
IDENT (328) 4 38 39 52 53 69 70 75 79 80 89 90 126 127 129 130 136
    177 179 180 223
L_STRING (329) 234
L_NUMBER (330) 233
L_CHAR (331) 235


Nicht-Terminal und die Regeln, in denen sie verwendet werden

$accept (77)
    auf der linken Seite: 0
start (78)
    auf der linken Seite: 1 2, auf der rechten Seite: 0
using (79)
    auf der linken Seite: 3 4, auf der rechten Seite: 11 20 25
using_low (80)
    auf der linken Seite: 5 6 7, auf der rechten Seite: 3 4
filestmnt (81)
    auf der linken Seite: 8 9 10 11 12, auf der rechten Seite: 13 14
    59
filestmnts (82)
    auf der linken Seite: 13 14, auf der rechten Seite: 2 14
classstmnt (83)
    auf der linken Seite: 15 16 17 18 19 20 21, auf der rechten Seite:
    22 23
classstmnts (84)
    auf der linken Seite: 22 23, auf der rechten Seite: 23 76
codestmnt (85)
    auf der linken Seite: 24 25 26 27 28 29 30 31 32 33 34 35, auf der rechten Seite:
    36 37 85 138 139 140 141 154 155 160 163 164 165 168 183
codestmnts (86)
    auf der linken Seite: 36 37, auf der rechten Seite: 37 84
type_ident (87)
    auf der linken Seite: 38 39, auf der rechten Seite: 39 40 41 42
    43 59
type (88)
    auf der linken Seite: 40 41 42 43, auf der rechten Seite: 5 6 7
    44 45 46 52 53 61 79 80 89 90 93 129 130 179 231 238
typelist (89)
    auf der linken Seite: 44 45 46, auf der rechten Seite: 46 57 72
    74
encpsltn (90)
    auf der linken Seite: 47 48 49, auf der rechten Seite: 75 79 80
    93 126 129 130
encpsltn_n_cls (91)
    auf der linken Seite: 50 51, auf der rechten Seite: 47 60 61
template_def (92)
    auf der linken Seite: 52 53, auf der rechten Seite: 54 55 56
template_defs (93)
    auf der linken Seite: 54 55 56, auf der rechten Seite: 56 58
template_use (94)
    auf der linken Seite: 57, auf der rechten Seite: 42 43
template (95)
    auf der linken Seite: 58, auf der rechten Seite: 73 74 78 92
namespace (96)
    auf der linken Seite: 59, auf der rechten Seite: 9
enum (97)
    auf der linken Seite: 60 61, auf der rechten Seite: 12 21
enum_body (98)
    auf der linken Seite: 62 63, auf der rechten Seite: 60 61
enum_values (99)
    auf der linken Seite: 64 65 66 67 68, auf der rechten Seite: 63
    67 68
enum_value (100)
    auf der linken Seite: 69 70, auf der rechten Seite: 64 65 66 67
    68
class (101)
    auf der linken Seite: 71 72 73 74, auf der rechten Seite: 8 18
classhead (102)
    auf der linken Seite: 75, auf der rechten Seite: 71 72 73 74
classbody (103)
    auf der linken Seite: 76, auf der rechten Seite: 71 72 73 74
mthd (104)
    auf der linken Seite: 77 78, auf der rechten Seite: 10 15
mthd_head (105)
    auf der linken Seite: 79 80, auf der rechten Seite: 77 78
mthd_args (106)
    auf der linken Seite: 81 82, auf der rechten Seite: 77 78 125
mthd_body (107)
    auf der linken Seite: 83 84 85, auf der rechten Seite: 77 78 91
    92 125 136 137
mthd_arglist (108)
    auf der linken Seite: 86 87 88, auf der rechten Seite: 82 88
mthd_arg (109)
    auf der linken Seite: 89 90, auf der rechten Seite: 86 87 88 94
    95 96 97
mthdop (110)
    auf der linken Seite: 91 92, auf der rechten Seite: 16
mthdop_head (111)
    auf der linken Seite: 93, auf der rechten Seite: 91 92
mthdop_args (112)
    auf der linken Seite: 94 95 96 97, auf der rechten Seite: 91 92
mthdop_ops1p (113)
    auf der linken Seite: 98 99 100 101, auf der rechten Seite: 95
mthdop_ops1s (114)
    auf der linken Seite: 102 103, auf der rechten Seite: 94 96
mthdop_ops2 (115)
    auf der linken Seite: 104 105 106 107 108 109 110 111 112 113 114
    115 116 117 118 119 120 121 122 123 124, auf der rechten Seite:
    97
mthdcnst (116)
    auf der linken Seite: 125, auf der rechten Seite: 17
mthdcnst_head (117)
    auf der linken Seite: 126 127, auf der rechten Seite: 125
prop (118)
    auf der linken Seite: 128, auf der rechten Seite: 19
prop_head (119)
    auf der linken Seite: 129 130, auf der rechten Seite: 128
prop_body (120)
    auf der linken Seite: 131 132 133 134 135, auf der rechten Seite:
    128
prop_get (121)
    auf der linken Seite: 136, auf der rechten Seite: 131 132 133
prop_set (122)
    auf der linken Seite: 137, auf der rechten Seite: 131 133 134
ifelse (123)
    auf der linken Seite: 138 139, auf der rechten Seite: 24
for (124)
    auf der linken Seite: 140 141, auf der rechten Seite: 26
for_step (125)
    auf der linken Seite: 142 143 144 145 146 147 148, auf der rechten Seite:
    140
for_step_arg (126)
    auf der linken Seite: 149 150 151, auf der rechten Seite: 142 143
    144 145 146 147 148 151
for_each (127)
    auf der linken Seite: 152 153, auf der rechten Seite: 141
while (128)
    auf der linken Seite: 154 155, auf der rechten Seite: 28
switch (129)
    auf der linken Seite: 156, auf der rechten Seite: 29
switch_cases (130)
    auf der linken Seite: 157 158, auf der rechten Seite: 156 158
switch_case (131)
    auf der linken Seite: 159 160, auf der rechten Seite: 157 158
case (132)
    auf der linken Seite: 161 162, auf der rechten Seite: 159 160 178
try (133)
    auf der linken Seite: 163, auf der rechten Seite: 169 170 171
catch (134)
    auf der linken Seite: 164 165, auf der rechten Seite: 166 167
catchlist (135)
    auf der linken Seite: 166 167, auf der rechten Seite: 167 169 170
finally (136)
    auf der linken Seite: 168, auf der rechten Seite: 169 171
trycatch (137)
    auf der linken Seite: 169 170 171, auf der rechten Seite: 27
statement (138)
    auf der linken Seite: 172 173 174 175 176 177 178, auf der rechten Seite:
    30
declaration (139)
    auf der linken Seite: 179, auf der rechten Seite: 32 152 153 165
    181
assignment (140)
    auf der linken Seite: 180 181, auf der rechten Seite: 232
scope (141)
    auf der linken Seite: 182 183, auf der rechten Seite: 31
val (142)
    auf der linken Seite: 184, auf der rechten Seite: 33 138 139 149
    150 151 152 153 154 155 156 173 175 176 180 181
exp01 (143)
    auf der linken Seite: 185 186, auf der rechten Seite: 184 186 222
    226 227 228
exp02 (144)
    auf der linken Seite: 187 188, auf der rechten Seite: 185 186
exp03 (145)
    auf der linken Seite: 189 190, auf der rechten Seite: 187 188
exp04 (146)
    auf der linken Seite: 191 192 193, auf der rechten Seite: 189 190
exp05 (147)
    auf der linken Seite: 194 195 196 197 198, auf der rechten Seite:
    191 192 193
exp06 (148)
    auf der linken Seite: 199 200 201, auf der rechten Seite: 194 195
    196 197 198
exp07 (149)
    auf der linken Seite: 202 203 204 205, auf der rechten Seite: 199
    200 201
exp08 (150)
    auf der linken Seite: 206 207 208 209 210, auf der rechten Seite:
    202 203 204 205
exp09 (151)
    auf der linken Seite: 211 212 213 214, auf der rechten Seite: 206
    207 208 209 210
exp10 (152)
    auf der linken Seite: 215 216 217, auf der rechten Seite: 211 212
    213 214
exp11 (153)
    auf der linken Seite: 218 219 220 221, auf der rechten Seite: 215
    216 217 222 223 224 225
arrget (154)
    auf der linken Seite: 222, auf der rechten Seite: 221
dotnav (155)
    auf der linken Seite: 223, auf der rechten Seite: 220
call (156)
    auf der linken Seite: 224 225, auf der rechten Seite: 219
explist (157)
    auf der linken Seite: 226 227 228, auf der rechten Seite: 224 228
expp (158)
    auf der linken Seite: 229 230 231 232, auf der rechten Seite: 218
cval (159)
    auf der linken Seite: 233 234 235 236 237 238, auf der rechten Seite:
    53 70 90 161 229


Zustand 0

    0 $accept: . start $end

    "public"     schiebe und gehe zu Zustand 1 über
    "local"      schiebe und gehe zu Zustand 2 über
    "derived"    schiebe und gehe zu Zustand 3 über
    "private"    schiebe und gehe zu Zustand 4 über
    "unbound"    schiebe und gehe zu Zustand 5 über
    "namespace"  schiebe und gehe zu Zustand 6 über
    "using"      schiebe und gehe zu Zustand 7 über

    $default  reduziere mit Regel 1 (start)

    start           gehe zu Zustand 8 über
    using           gehe zu Zustand 9 über
    using_low       gehe zu Zustand 10 über
    filestmnt       gehe zu Zustand 11 über
    filestmnts      gehe zu Zustand 12 über
    encpsltn        gehe zu Zustand 13 über
    encpsltn_n_cls  gehe zu Zustand 14 über
    namespace       gehe zu Zustand 15 über
    enum            gehe zu Zustand 16 über
    class           gehe zu Zustand 17 über
    classhead       gehe zu Zustand 18 über
    mthd            gehe zu Zustand 19 über
    mthd_head       gehe zu Zustand 20 über


Zustand 1

   50 encpsltn_n_cls: "public" .

    $default  reduziere mit Regel 50 (encpsltn_n_cls)


Zustand 2

   51 encpsltn_n_cls: "local" .

    $default  reduziere mit Regel 51 (encpsltn_n_cls)


Zustand 3

   48 encpsltn: "derived" .

    $default  reduziere mit Regel 48 (encpsltn)


Zustand 4

   49 encpsltn: "private" .

    $default  reduziere mit Regel 49 (encpsltn)


Zustand 5

   80 mthd_head: "unbound" . encpsltn type IDENT

    "public"   schiebe und gehe zu Zustand 1 über
    "local"    schiebe und gehe zu Zustand 2 über
    "derived"  schiebe und gehe zu Zustand 3 über
    "private"  schiebe und gehe zu Zustand 4 über

    encpsltn        gehe zu Zustand 21 über
    encpsltn_n_cls  gehe zu Zustand 22 über


Zustand 6

   59 namespace: "namespace" . type_ident "{" filestmnt "}"

    IDENT  schiebe und gehe zu Zustand 23 über

    type_ident  gehe zu Zustand 24 über


Zustand 7

    5 using_low: "using" . "namespace" type ";"
    6          | "using" . "enum" type ";"
    7          | "using" . "class" type ";"

    "class"      schiebe und gehe zu Zustand 25 über
    "namespace"  schiebe und gehe zu Zustand 26 über
    "enum"       schiebe und gehe zu Zustand 27 über


Zustand 8

    0 $accept: start . $end

    $end  schiebe und gehe zu Zustand 28 über


Zustand 9

   11 filestmnt: using .

    $default  reduziere mit Regel 11 (filestmnt)


Zustand 10

    3 using: using_low .
    4      | using_low . "=" IDENT

    "="  schiebe und gehe zu Zustand 29 über

    $default  reduziere mit Regel 3 (using)


Zustand 11

   13 filestmnts: filestmnt .

    $default  reduziere mit Regel 13 (filestmnts)


Zustand 12

    2 start: filestmnts .
   14 filestmnts: filestmnts . filestmnt

    "public"     schiebe und gehe zu Zustand 1 über
    "local"      schiebe und gehe zu Zustand 2 über
    "derived"    schiebe und gehe zu Zustand 3 über
    "private"    schiebe und gehe zu Zustand 4 über
    "unbound"    schiebe und gehe zu Zustand 5 über
    "namespace"  schiebe und gehe zu Zustand 6 über
    "using"      schiebe und gehe zu Zustand 7 über

    $default  reduziere mit Regel 2 (start)

    using           gehe zu Zustand 9 über
    using_low       gehe zu Zustand 10 über
    filestmnt       gehe zu Zustand 30 über
    encpsltn        gehe zu Zustand 13 über
    encpsltn_n_cls  gehe zu Zustand 14 über
    namespace       gehe zu Zustand 15 über
    enum            gehe zu Zustand 16 über
    class           gehe zu Zustand 17 über
    classhead       gehe zu Zustand 18 über
    mthd            gehe zu Zustand 19 über
    mthd_head       gehe zu Zustand 20 über


Zustand 13

   75 classhead: encpsltn . "class" IDENT
   79 mthd_head: encpsltn . type IDENT

    "::"     schiebe und gehe zu Zustand 31 über
    "class"  schiebe und gehe zu Zustand 32 über
    IDENT    schiebe und gehe zu Zustand 23 über

    type_ident  gehe zu Zustand 33 über
    type        gehe zu Zustand 34 über


Zustand 14

   47 encpsltn: encpsltn_n_cls .
   60 enum: encpsltn_n_cls . "enum" enum_body
   61     | encpsltn_n_cls . "enum" ":" type enum_body

    "enum"  schiebe und gehe zu Zustand 35 über

    $default  reduziere mit Regel 47 (encpsltn)


Zustand 15

    9 filestmnt: namespace .

    $default  reduziere mit Regel 9 (filestmnt)


Zustand 16

   12 filestmnt: enum .

    $default  reduziere mit Regel 12 (filestmnt)


Zustand 17

    8 filestmnt: class .

    $default  reduziere mit Regel 8 (filestmnt)


Zustand 18

   71 class: classhead . classbody
   72      | classhead . ":" typelist classbody
   73      | classhead . template classbody
   74      | classhead . template ":" typelist classbody

    ":"  schiebe und gehe zu Zustand 36 über
    "<"  schiebe und gehe zu Zustand 37 über
    "{"  schiebe und gehe zu Zustand 38 über

    template   gehe zu Zustand 39 über
    classbody  gehe zu Zustand 40 über


Zustand 19

   10 filestmnt: mthd .

    $default  reduziere mit Regel 10 (filestmnt)


Zustand 20

   77 mthd: mthd_head . mthd_args mthd_body
   78     | mthd_head . template mthd_args mthd_body

    "<"  schiebe und gehe zu Zustand 37 über
    "("  schiebe und gehe zu Zustand 41 über

    template   gehe zu Zustand 42 über
    mthd_args  gehe zu Zustand 43 über


Zustand 21

   80 mthd_head: "unbound" encpsltn . type IDENT

    "::"   schiebe und gehe zu Zustand 31 über
    IDENT  schiebe und gehe zu Zustand 23 über

    type_ident  gehe zu Zustand 33 über
    type        gehe zu Zustand 44 über


Zustand 22

   47 encpsltn: encpsltn_n_cls .

    $default  reduziere mit Regel 47 (encpsltn)


Zustand 23

   38 type_ident: IDENT .

    $default  reduziere mit Regel 38 (type_ident)


Zustand 24

   39 type_ident: type_ident . "::" IDENT
   59 namespace: "namespace" type_ident . "{" filestmnt "}"

    "::"  schiebe und gehe zu Zustand 45 über
    "{"   schiebe und gehe zu Zustand 46 über


Zustand 25

    7 using_low: "using" "class" . type ";"

    "::"   schiebe und gehe zu Zustand 31 über
    IDENT  schiebe und gehe zu Zustand 23 über

    type_ident  gehe zu Zustand 33 über
    type        gehe zu Zustand 47 über


Zustand 26

    5 using_low: "using" "namespace" . type ";"

    "::"   schiebe und gehe zu Zustand 31 über
    IDENT  schiebe und gehe zu Zustand 23 über

    type_ident  gehe zu Zustand 33 über
    type        gehe zu Zustand 48 über


Zustand 27

    6 using_low: "using" "enum" . type ";"

    "::"   schiebe und gehe zu Zustand 31 über
    IDENT  schiebe und gehe zu Zustand 23 über

    type_ident  gehe zu Zustand 33 über
    type        gehe zu Zustand 49 über


Zustand 28

    0 $accept: start $end .

    $default  annehmen


Zustand 29

    4 using: using_low "=" . IDENT

    IDENT  schiebe und gehe zu Zustand 50 über


Zustand 30

   14 filestmnts: filestmnts filestmnt .

    $default  reduziere mit Regel 14 (filestmnts)


Zustand 31

   41 type: "::" . type_ident
   42     | "::" . type_ident template_use

    IDENT  schiebe und gehe zu Zustand 23 über

    type_ident  gehe zu Zustand 51 über


Zustand 32

   75 classhead: encpsltn "class" . IDENT

    IDENT  schiebe und gehe zu Zustand 52 über


Zustand 33

   39 type_ident: type_ident . "::" IDENT
   40 type: type_ident .
   43     | type_ident . template_use

    "::"  schiebe und gehe zu Zustand 45 über
    "<"   schiebe und gehe zu Zustand 53 über

    "<"       [reduziere mit Regel 40 (type)]
    $default  reduziere mit Regel 40 (type)

    template_use  gehe zu Zustand 54 über


Zustand 34

   79 mthd_head: encpsltn type . IDENT

    IDENT  schiebe und gehe zu Zustand 55 über


Zustand 35

   60 enum: encpsltn_n_cls "enum" . enum_body
   61     | encpsltn_n_cls "enum" . ":" type enum_body

    ":"  schiebe und gehe zu Zustand 56 über
    "{"  schiebe und gehe zu Zustand 57 über

    enum_body  gehe zu Zustand 58 über


Zustand 36

   72 class: classhead ":" . typelist classbody

    "::"   schiebe und gehe zu Zustand 31 über
    IDENT  schiebe und gehe zu Zustand 23 über

    type_ident  gehe zu Zustand 33 über
    type        gehe zu Zustand 59 über
    typelist    gehe zu Zustand 60 über


Zustand 37

   58 template: "<" . template_defs ">"

    "::"   schiebe und gehe zu Zustand 31 über
    IDENT  schiebe und gehe zu Zustand 23 über

    type_ident     gehe zu Zustand 33 über
    type           gehe zu Zustand 61 über
    template_def   gehe zu Zustand 62 über
    template_defs  gehe zu Zustand 63 über


Zustand 38

   76 classbody: "{" . classstmnts "}"

    "public"   schiebe und gehe zu Zustand 1 über
    "local"    schiebe und gehe zu Zustand 2 über
    "derived"  schiebe und gehe zu Zustand 3 über
    "private"  schiebe und gehe zu Zustand 4 über
    "unbound"  schiebe und gehe zu Zustand 64 über
    "~"        schiebe und gehe zu Zustand 65 über
    "using"    schiebe und gehe zu Zustand 7 über

    using           gehe zu Zustand 66 über
    using_low       gehe zu Zustand 10 über
    classstmnt      gehe zu Zustand 67 über
    classstmnts     gehe zu Zustand 68 über
    encpsltn        gehe zu Zustand 69 über
    encpsltn_n_cls  gehe zu Zustand 14 über
    enum            gehe zu Zustand 70 über
    class           gehe zu Zustand 71 über
    classhead       gehe zu Zustand 18 über
    mthd            gehe zu Zustand 72 über
    mthd_head       gehe zu Zustand 20 über
    mthdop          gehe zu Zustand 73 über
    mthdop_head     gehe zu Zustand 74 über
    mthdcnst        gehe zu Zustand 75 über
    mthdcnst_head   gehe zu Zustand 76 über
    prop            gehe zu Zustand 77 über
    prop_head       gehe zu Zustand 78 über


Zustand 39

   73 class: classhead template . classbody
   74      | classhead template . ":" typelist classbody

    ":"  schiebe und gehe zu Zustand 79 über
    "{"  schiebe und gehe zu Zustand 38 über

    classbody  gehe zu Zustand 80 über


Zustand 40

   71 class: classhead classbody .

    $default  reduziere mit Regel 71 (class)


Zustand 41

   81 mthd_args: "(" . ")"
   82          | "(" . mthd_arglist ")"

    "::"   schiebe und gehe zu Zustand 31 über
    ")"    schiebe und gehe zu Zustand 81 über
    IDENT  schiebe und gehe zu Zustand 23 über

    type_ident    gehe zu Zustand 33 über
    type          gehe zu Zustand 82 über
    mthd_arglist  gehe zu Zustand 83 über
    mthd_arg      gehe zu Zustand 84 über


Zustand 42

   78 mthd: mthd_head template . mthd_args mthd_body

    "("  schiebe und gehe zu Zustand 41 über

    mthd_args  gehe zu Zustand 85 über


Zustand 43

   77 mthd: mthd_head mthd_args . mthd_body

    "{"   schiebe und gehe zu Zustand 86 über
    "=>"  schiebe und gehe zu Zustand 87 über

    mthd_body  gehe zu Zustand 88 über


Zustand 44

   80 mthd_head: "unbound" encpsltn type . IDENT

    IDENT  schiebe und gehe zu Zustand 89 über


Zustand 45

   39 type_ident: type_ident "::" . IDENT

    IDENT  schiebe und gehe zu Zustand 90 über


Zustand 46

   59 namespace: "namespace" type_ident "{" . filestmnt "}"

    "public"     schiebe und gehe zu Zustand 1 über
    "local"      schiebe und gehe zu Zustand 2 über
    "derived"    schiebe und gehe zu Zustand 3 über
    "private"    schiebe und gehe zu Zustand 4 über
    "unbound"    schiebe und gehe zu Zustand 5 über
    "namespace"  schiebe und gehe zu Zustand 6 über
    "using"      schiebe und gehe zu Zustand 7 über

    using           gehe zu Zustand 9 über
    using_low       gehe zu Zustand 10 über
    filestmnt       gehe zu Zustand 91 über
    encpsltn        gehe zu Zustand 13 über
    encpsltn_n_cls  gehe zu Zustand 14 über
    namespace       gehe zu Zustand 15 über
    enum            gehe zu Zustand 16 über
    class           gehe zu Zustand 17 über
    classhead       gehe zu Zustand 18 über
    mthd            gehe zu Zustand 19 über
    mthd_head       gehe zu Zustand 20 über


Zustand 47

    7 using_low: "using" "class" type . ";"

    ";"  schiebe und gehe zu Zustand 92 über


Zustand 48

    5 using_low: "using" "namespace" type . ";"

    ";"  schiebe und gehe zu Zustand 93 über


Zustand 49

    6 using_low: "using" "enum" type . ";"

    ";"  schiebe und gehe zu Zustand 94 über


Zustand 50

    4 using: using_low "=" IDENT .

    $default  reduziere mit Regel 4 (using)


Zustand 51

   39 type_ident: type_ident . "::" IDENT
   41 type: "::" type_ident .
   42     | "::" type_ident . template_use

    "::"  schiebe und gehe zu Zustand 45 über
    "<"   schiebe und gehe zu Zustand 53 über

    "<"       [reduziere mit Regel 41 (type)]
    $default  reduziere mit Regel 41 (type)

    template_use  gehe zu Zustand 95 über


Zustand 52

   75 classhead: encpsltn "class" IDENT .

    $default  reduziere mit Regel 75 (classhead)


Zustand 53

   57 template_use: "<" . typelist ">"

    "::"   schiebe und gehe zu Zustand 31 über
    IDENT  schiebe und gehe zu Zustand 23 über

    type_ident  gehe zu Zustand 33 über
    type        gehe zu Zustand 59 über
    typelist    gehe zu Zustand 96 über


Zustand 54

   43 type: type_ident template_use .

    $default  reduziere mit Regel 43 (type)


Zustand 55

   79 mthd_head: encpsltn type IDENT .

    $default  reduziere mit Regel 79 (mthd_head)


Zustand 56

   61 enum: encpsltn_n_cls "enum" ":" . type enum_body
